--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,10 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="alreadyHaveAccount">Already have Account</string>
+    <string name="doNotHaveAccount">Do not have account</string>
     <string name="signUp">SIGN UP</string>
+    <string name="signIn">SIGN IN</string>
     <string name="google">Google</string>
     <string name="facebook">Facebook</string>
+    <string name="signUpWithPhone">Sign up with phone</string>
 </resources>
