added feature to sign in and logout with the google account and removed a bug - when once sign in with any of the google accounts on the device even after logout when login was pressed it did not shows all available google id it simply login with the account you previously logged in

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="google">Google</string>
     <string name="facebook">Facebook</string>
     <string name="signUpWithPhone">Sign up with phone</string>
+    <string name="settings">Settings</string>
+    <string name="logout">Logout</string>
 </resources>
