--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="signUpWithPhone">Sign up with phone</string>
     <string name="settings">Settings</string>
     <string name="logout">Logout</string>
+    <string name="enterMessage">Enter Message</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
